# LISA-Project-Science-Sandbox

./: .gitmodules  README.md  bbhx_Mmac_setup.py  fom_install.sh  nasa_fom_install.sh  pyproject.toml
notebooks/: gen_gb_pe_dist.py  ldc2a_inj.npy  lisa_proj_sci_fom_more_complex.ipynb
