[project]
name = "lisa-project-science-sandbox"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.1.0",
    "bbhx>=1.1.12",
    "chainconsumer>=1.2.2",
    "corner>=2.2.3",
    "cython>=3.1.2",
    "eryn>=1.1.14",
    "fastlisaresponse>=1.0.11",
    "gbgpu>=1.1.3",
    "h5py>=3.14.0",
    "ipython>=9.3.0",
    "jupyterlab>=4.4.3",
    "lisaanalysistools>=1.0.14",
    "matplotlib>=3.10.3",
    "mpmath>=1.3.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
]
